--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&display=swap');
+
 *,
 *::before,
 *::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.3125rem;
+    color: white;
+    background-color: black;
 }
+
+h1 {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: .5rem;
+    margin-left: 1rem;
+}
+
+.form-group > input {
+    border-radius: .25em;
+    padding: .25em;
+    border: 2px solid white;
+}
+
+
+#btn {
+    display: block;
+    border-radius: .25em;
+    border: 2px solid #00ffd6;
+    padding: .5em 2em;    
+    margin: 0 auto;
+    background-color: #00ffd6;
+    color: black;
+    font-weight: bold;
+    transition: all 0.2s;
+}
+
+#btn:hover {
+    background-color: black;
+    color: #00ffd6;
+    cursor: pointer;
+}
+
