--- a/styles.css
+++ b/styles.css
@@ -18,17 +18,23 @@ h1 {
 }
 
 .form-group {
-    margin: 1rem .5rem;
     display: flex;
     flex-direction: column;
     gap: .25rem;
+    margin: 1rem .5rem;
 }
 
 .form-group > input {
     border-radius: .25em;
     padding: .25em;
+    margin: 0 auto;
     border: 2px solid white;
-    width: 80%;
+    max-width: 80%;
+}
+
+.form-group > label {
+    margin: 0 auto;
+    font-weight: bold;
 }
 
 
