now need to reset array on calculate

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,16 @@ h1 {
     /* border: 2px solid red; */
 }
 
+.final-cost-meal-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 1rem .5rem;
+
+    /* border: 2px solid red; */
+}
+
 .each-meal.form-group {
     display: flex;
     flex-direction: column;
