--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,6 @@ h1 {
     margin: 1rem .5rem;
     /* border: 2px solid green; */
     max-width: 80%;
-
 }
 
 .each-meal > input {
@@ -79,6 +78,7 @@ button {
     border: 2px solid #00ffd6;
     padding: .5em 2em;    
     margin: 0 auto;
+    /* min-width: 1px; */
     background-color: #00ffd6;
     color: black;
     font-weight: bold;
