--- a/styles.css
+++ b/styles.css
@@ -25,17 +25,23 @@ form {
     /* border: 2px solid red; */
     justify-content: center;
     align-items: center;
+    gap: 1rem;
 }
 
 .meal-group {
     width: clamp(20%, 80%, 90%);
 }
 
+.meal-cost-title {
+    width: clamp(20%, 80%, 90%);
+    /* border: 2px solid green; */
+}
 
 input {
     padding: 0.5rem;
     border: 3px solid #BCBABA;
     outline: none;
+    width: clamp(20%, 80%, 90%);
 }
 
 input:focus {
@@ -46,7 +52,6 @@ input:focus {
     background-clip: padding-box, border-box;
 }
 
-
 .meal-group > input {
     width: clamp(10%, 20%, 100%);
     align-self: center;  
@@ -55,10 +60,7 @@ input:focus {
 .form-group {
     display: flex;
     flex-direction: column;
-    gap: .25rem;
-    margin: .5rem 0;
     /* border: 2px solid green; */
-    max-width: 80%;
 }
 
 .form-group > input {
@@ -66,43 +68,57 @@ input:focus {
     padding: .25em;
 }
 
-.cost-meal-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin: 1rem .5rem;
-
-    /* border: 2px solid red; */
-}
 
 .final-cost-meal-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 1rem .5rem;
+    margin: 0 .5rem;
     /* border: 2px solid red; */
+}
+
+.cost-meal-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: clamp(20%, 80%, 90%);
+    /* border: 2px solid black; */
 }
 
 .each-meal.form-group {
     display: flex;
-    flex-direction: column;
-    gap: .25rem;
-    margin: 1rem .5rem;
-    max-width: 80%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 100%;
+    border: 2px solid red;
 }
 
-.each-meal > input {
-    max-width: 100%;
-} 
+.each-meal.form-group > label {
+    width: clamp(20%, 40%, 90%);
+    border: 2px solid black;
+}
+
+.each-meal.form-group > input {
+    width: clamp(20%, 40%, 90%);
+}
 
 .tax-tip-container {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     width: clamp(20%, 80%, 90%);
-    /* border: 2px solid red; */
+    border: 2px solid red;
+}
+
+.tax-tip-container .form-group {
+    width: clamp(20%, 40%, 90%);
+    border: 2px solid black;
+}
+
+.tax-tip-container input {
+    width: 100%;
 }
 
 button {
