--- a/styles.css
+++ b/styles.css
@@ -13,22 +13,35 @@
     background-color: #F5F5F5;
 }
 
+#header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.image {
+    width: clamp(10%, 20%, 90%);
+}
+
 h1 {
     font-size: 2rem;
-    text-align: center;
     font-weight: 700;
 }
 
 form {
     display: flex;
     flex-direction: column;
-    /* border: 2px solid red; */
+    border: 2px solid red;
     justify-content: center;
     align-items: center;
     gap: 1rem;
 }
 
 .meal-group {
+    border: 2px solid black;
     width: clamp(20%, 80%, 90%);
 }
 
@@ -42,6 +55,10 @@ input {
     border: 3px solid #BCBABA;
     outline: none;
     width: clamp(20%, 80%, 90%);
+}
+
+#number-people {
+    text-align: center;
 }
 
 input:focus {
@@ -92,12 +109,12 @@ input:focus {
     justify-content: space-between;
     align-items: center;
     max-width: 100%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .each-meal.form-group > label {
     width: clamp(20%, 40%, 90%);
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 .each-meal.form-group > input {
@@ -109,12 +126,12 @@ input:focus {
     justify-content: space-between;
     flex-wrap: wrap;
     width: clamp(20%, 80%, 90%);
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .tax-tip-container .form-group {
     width: clamp(20%, 40%, 90%);
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 .tax-tip-container input {
@@ -139,3 +156,18 @@ button:hover {
     color: #00ffd6;
     cursor: pointer;
 }
+
+.total-word {
+    color: black;
+    font-weight: bold;
+}
+
+.total-value {
+    color: #F48200;
+    font-weight: bold;
+}
+
+#total-div {
+    /* align-self: end; */
+}
+
