added cards with shadows for each meal

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,6 @@ input:focus {
     flex-direction: column;
     gap: 20px;
     width: 100%;
-
     /* border: 2px solid black; */
 }
 
@@ -110,16 +109,35 @@ input:focus {
     justify-content: space-between;
     align-items: center;
     max-width: 100%;
+    box-shadow: 0px 4px 25px 0px #cfc9c9;
+    border-radius: 4px;
+    padding: 2% 5%;
     /* border: 2px solid red; */
+}
+
+.each-meal-div {
+    display: flex;
+    align-items: center;
+    /* border: 2px solid black; */
+    gap: 1rem;
 }
 
 .each-meal.form-group > label {
     width: clamp(20%, 40%, 90%);
     /* border: 2px solid black; */
+    justify-self: start;
 }
 
-.each-meal.form-group > input {
-    width: clamp(20%, 40%, 90%);
+.each-meal-color {
+    color: rgba(244, 130, 0, 0.6);
+    /* border: 2px solid red; */
+
+}
+
+.chevron {
+    /* border: 2px solid red; */
+    height: .5rem;
+    cursor: pointer;
 }
 
 .tax-tip-container {
