--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ input {
     padding: 0.5rem;
     border: 3px solid #BCBABA;
     outline: none;
-    width: clamp(20%, 80%, 90%);
+    width: clamp(20%, 20%, 90%);
 }
 
 #number-people {
@@ -105,27 +105,39 @@ input:focus {
 
 .each-meal.form-group {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    max-width: 100%;
     box-shadow: 0px 4px 25px 0px #cfc9c9;
     border-radius: 4px;
     padding: 2% 5%;
-    /* border: 2px solid red; */
+    cursor: pointer;
+    border: 2px solid red;
 }
 
-.each-meal-div {
+.each-meal-1 {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.each-meal-div-1 {
     display: flex;
     align-items: center;
     /* border: 2px solid black; */
     gap: 1rem;
 }
 
-.each-meal.form-group > label {
-    width: clamp(20%, 40%, 90%);
+.meal-cost-line {
+    display: flex;
     /* border: 2px solid black; */
-    justify-self: start;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.meal-cost-line label {
+    color: #F48200;
+    font-weight: bold;
 }
 
 .each-meal-color {
@@ -134,10 +146,27 @@ input:focus {
 
 }
 
+.total-div-mini {
+    align-self: end;
+}
+
+.total-word-mini {
+    font-size: 1rem;
+}
+
+.total-value-mini {
+    font-size: 1rem;
+}
+
+.additional-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10%;
+}
+
 .chevron {
     /* border: 2px solid red; */
     height: .5rem;
-    cursor: pointer;
 }
 
 .tax-tip-container {
@@ -183,11 +212,5 @@ button:hover {
 }
 
 .total-value {
-    color: #F48200;
-    font-weight: bold;
-}
-
-#total-div {
-    align-self: end;
-}
-
+    color: #F48200;￼
+    Total: $0.00
